--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function generate(){number=Math.floor(Math.random()*1143)+1000;document.getEleme
 generate();</script>
             
             <!-- VSL -->
-            <div id="vid_67e02d3a22fea58712cef4f8" style="position: relative; width: 100%; padding: 56.25% 0 0;"> <img id="thumb_67e02d3a22fea58712cef4f8" src="https://images.converteai.net/0c897592-ec1a-4ee7-bd94-25241e56b721/players/67e02d3a22fea58712cef4f8/thumbnail.jpg" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; display: block;" alt="thumbnail"> <div id="backdrop_67e02d3a22fea58712cef4f8" style=" -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px); position: absolute; top: 0; height: 100%; width: 100%; "></div> </div> <script type="text/javascript" id="scr_67e02d3a22fea58712cef4f8"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/0c897592-ec1a-4ee7-bd94-25241e56b721/players/67e02d3a22fea58712cef4f8/player.js", s.async=!0,document.head.appendChild(s); </script>
+            <vturb-smartplayer id="vid-687318c98a262adc29d404bf" style="display: block; margin: 0 auto; width: 100%; "></vturb-smartplayer> <script type="text/javascript"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/9db8c7dc-ff3f-4168-9da3-bbc6d4b69af4/players/687318c98a262adc29d404bf/v4/player.js", s.async=!0,document.head.appendChild(s); </script>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
