--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ generate();</script>
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.hotmart.com/A56207455Y?off=8phob2bi&checkoutMode=10" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO TER ACESSO A TODAS AS VIDEO AULAS!</span>
+                <span class="span-btn">QUERO APRENDER AGORA MESMO POR APENAS R$ 97,00!</span>
                 <span class="span-btn2">(atenção: faltam poucas vagas)</span>  
               </a>
             </div>
@@ -353,7 +353,7 @@ generate();</script>
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 500000000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 0); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
