--- a/index.html
+++ b/index.html
@@ -338,9 +338,9 @@ generate();</script>
                         
            <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://pay.hotmart.com/A56207455Y?off=8phob2bi&checkoutMode=10" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO TER ACESSO A TODAS AS VIDEO AULAS</span>
-                <span class="span-btn2">(atenção:faltam poucas vagas)</span>
+              <a href="https://api.whatsapp.com/send?phone=5511951978653&text=Quero%20saber%20mais%20sobre%20o%20curso!!%20" class="a-btn" style="text-decoration: none;">
+                <span class="span-btn">WHATSAPP PARA TIRAR DÚVIDAS</span>
+                <span class="span-btn2">(diretamente comigo)</span>
               </a>
             </div>
           </div>
