--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ generate();</script>
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.hotmart.com/A56207455Y?off=8phob2bi&checkoutMode=10" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO APRENDER AGORA MESMO POR APENAS R$ 97,00!</span>
-                <span class="span-btn2">(atenção: faltam poucas vagas)</span>  
+                <span class="span-btn">Quero aprender agora e garantir acesso vitalício</span>
+                <span class="span-btn2">(POR APENAS R$97,00)</span>  
               </a>
             </div>
           </div>
