--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@ function generate(){number=Math.floor(Math.random()*1143)+1000;document.getEleme
 generate();</script>
             
             <!-- VSL -->
-            <vturb-smartplayer id="vid-693e0e0fce33aa061d9c8cd6" style="display: block; margin: 0 auto; width: 100%; "></vturb-smartplayer> <script type="text/javascript"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/03f4c114-096a-437f-acde-2f525923623e/players/693e0e0fce33aa061d9c8cd6/v4/player.js", s.async=!0,document.head.appendChild(s); </script>
+            
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.hotmart.com/A56207455Y?off=8phob2bi&checkoutMode=10" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">Quero aprender agora e garantir acesso vitalício</span>
-                <span class="span-btn2">(POR APENAS R$97,00)</span>  
+              <a href="https://leandro-renato-lima.kpages.online/cursosancadeeps" class="a-btn" style="text-decoration: none;">
+                <span class="span-btn">👉 Ver o próximo conteúdo</span>
+                <span class="span-btn2">(Conhecer a técnica de sanca em EPS)</span>  
               </a>
             </div>
           </div>
