--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ src="https://www.facebook.com/tr?id=595539792179362&ev=PageView&noscript=1"
             <!-- Headline -->
             <h3 class="my-4"><b>IMPRESSIONE SUAS VISITAS! DESCUBRA COMO DEIXAR SUA CASA MAIS ATRAENTE E AINDA PODER FAZER UMA BOA RENDA COM AS SANCAS DE ISOPOR EPS!</b></h3>
 
-            <span id="number"></span> pessoas estão vendo esse vídeo agora!
+            <span id="number"></span> pessoas estão vendo o vídeo agora!
 <script>
 function add(){number+=Math.floor((Math.random()*6)+1);document.getElementById("number").innerHTML=number;setTimeout("add()",10000);}        
 function generate(){number=Math.floor(Math.random()*1143)+1000;document.getElementById("number").innerHTML=number;add();}
