--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function generate(){number=Math.floor(Math.random()*1143)+1000;document.getEleme
 generate();</script>
             
             <!-- VSL -->
-            
+            <vturb-smartplayer id="vid-69520fa0b73ccf90101c94c3" style="display: block; margin: 0 auto; width: 100%; "></vturb-smartplayer> <script type="text/javascript"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/021a6872-7ee8-405a-be93-ea43a142b9fd/players/69520fa0b73ccf90101c94c3/v4/player.js", s.async=!0,document.head.appendChild(s); </script>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
