--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function generate(){number=Math.floor(Math.random()*1143)+1000;document.getEleme
 generate();</script>
             
             <!-- VSL -->
-            
+            <vturb-smartplayer id="vid-696c830ce1aa589ccc4a4d5b" style="display: block; margin: 0 auto; width: 100%; "></vturb-smartplayer> <script type="text/javascript"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/facd96a3-a63f-47ce-8e2e-f9f2bffba754/players/696c830ce1aa589ccc4a4d5b/v4/player.js", s.async=!0,document.head.appendChild(s); </script>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
