--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ generate();</script>
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://leandro-renato-lima.kpages.online/cursosancadeeps" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">👉 Ver o próximo conteúdo</span>
+                <span class="span-btn"> Ver o próximo conteúdo</span>
                 <span class="span-btn2">(Conhecer a técnica de sanca em EPS)</span>  
               </a>
             </div>
@@ -353,7 +353,7 @@ generate();</script>
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 3000000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 300); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
