--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ src="https://www.facebook.com/tr?id=595539792179362&ev=PageView&noscript=1"
             
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Aprenda a fazer sancas de isopor EPS e descubra como transformar esse serviço em uma renda mensal de até R$ 4 mil</b></h3>
+            <h3 class="my-4"><b>Aprenda a fazer sancas de isopor EPS e descubra como transformar esse serviço em uma renda mensal </b></h3>
 
             <span id="number"></span> pessoas estão vendo o vídeo agora!
 <script>
