--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function generate(){number=Math.floor(Math.random()*1143)+1000;document.getEleme
 generate();</script>
             
             <!-- VSL -->
-            <vturb-smartplayer id="vid-696c830ce1aa589ccc4a4d5b" style="display: block; margin: 0 auto; width: 100%; "></vturb-smartplayer> <script type="text/javascript"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/facd96a3-a63f-47ce-8e2e-f9f2bffba754/players/696c830ce1aa589ccc4a4d5b/v4/player.js", s.async=!0,document.head.appendChild(s); </script>
+            <iframe width="365" height="315" src="https://www.youtube.com/embed/ltbgGkFOSRg?si=B51Nnv8O6FkadTCb&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
@@ -353,7 +353,7 @@ generate();</script>
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 3000000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 300); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
