--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ generate();</script>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://leandro-renato-lima.kpages.online/cursosancadeeps" class="a-btn" style="text-decoration: none;">
+              <a href="https://leandro-renato-lima.kpages.online/curso-sanca-de-eps-2-0-56f1b770-4ec0-412d-a8be-7dc78ce580cc" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn"> Ver o próximo conteúdo</span>
                 <span class="span-btn2">(Conhecer a técnica de sanca em EPS)</span>  
               </a>
